--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <section class="banner">
             <button class="nav-button left" onclick="prevSlide()">&#10094;</button>
-            <img id="banner-image" src="D:/Github/GTM Website/images/s1.jpg" alt="Banner Image">
+            <img id="banner-image" src="s1.jpg" alt="Banner Image">
             <button class="nav-button right" onclick="nextSlide()">&#10095;</button>
         </section>
 
@@ -56,21 +56,21 @@
             <div class="card">
                 <h3>Revamp your home in style</h3>
                 <div class="image-placeholder">
-                    <img src="D:\Github\GTM Website\images\1.jpg" alt="Description" style="width:100%; height:300px; border-radius:5px;">
+                    <img src="1.jpg" alt="Description" style="width:100%; height:300px; border-radius:5px;">
                 </div>
                 <p>Cushion covers, bedsheets & more</p>
             </div>
             <div class="card">
                 <h3>Appliances for your home | Up to 55% off</h3>
                 <div class="image-placeholder">
-                    <img src="D:/Github/GTM Website/images/2.jpg" alt="Description" style="width:100%; height:300px; border-radius:5px;">
+                    <img src="2.jpg" alt="Description" style="width:100%; height:300px; border-radius:5px;">
                 </div>
                 <p>Air conditioners, Refrigerators</p>
             </div>
             <div class="card">
                 <h3>Starting ₹149 | Headphones</h3>
                 <div class="image-placeholder">
-                    <img src="D:/Github/GTM Website/images/3.jpg" alt="Description" style="width:100%; height:300px; border-radius:5px;">
+                    <img src="3.jpg" alt="Description" style="width:100%; height:300px; border-radius:5px;">
                 </div>
                 <p>boAt, Boult</p>
             </div>
