--- a/mobiles.html
+++ b/mobiles.html
@@ -53,24 +53,24 @@
         <section class="product-list">
             <!-- Sample Product Card -->
             <div class="product-card" data-product-id="poco-m6">
-                <img src="D:/Github/GTM Website/images/iq.jpg" alt="POCO M6 5G" class="product-image">
+                <img src="iq.jpg" alt="POCO M6 5G" class="product-image">
                 <h3>POCO M6 5G (Orion Blue, 4GB RAM, 64GB Storage)</h3>
                 <p><strong>Price:</strong> ₹7,999 <span class="discount">(16% off)</span></p>
-                <button class="add-to-cart" onclick="addToCart('POCO M6 5G (Orion Blue, 4GB RAM, 64GB Storage)', 7999, 'C:D:/Github/GTM Website/images/iq.jpg')">Add to cart</button>
+                <button class="add-to-cart" onclick="addToCart('POCO M6 5G (Orion Blue, 4GB RAM, 64GB Storage)', 7999, 'iq.jpg')">Add to cart</button>
             </div>
 
             <div class="product-card" data-product-id="redmi-13c">
-                <img src="D:/Github/GTM Website/images/rm.jpg" alt="Redmi 13C 5G" class="product-image">
+                <img src="rm.jpg" alt="Redmi 13C 5G" class="product-image">
                 <h3>Redmi 13C 5G (Starlight Black, 4GB RAM, 128GB Storage)</h3>
                 <p><strong>Price:</strong> ₹9,199 <span class="discount">(34% off)</span></p>
-                <button class="add-to-cart" onclick="addToCart('Redmi 13C 5G (Starlight Black, 4GB RAM, 128GB Storage)', 9199, 'C:D:/Github/GTM Website/images/rm.jpg')">Add to cart</button>
+                <button class="add-to-cart" onclick="addToCart('Redmi 13C 5G (Starlight Black, 4GB RAM, 128GB Storage)', 9199, 'rm.jpg')">Add to cart</button>
             </div>
 
             <div class="product-card" data-product-id="iqoo-z9-lite">
-                <img src="D:/Github/GTM Website/images/pc.jpg" alt="iQOO Z9 Lite 5G" class="product-image">
+                <img src="pc.jpg" alt="iQOO Z9 Lite 5G" class="product-image">
                 <h3>iQOO Z9 Lite 5G (Mocha Brown, 6GB RAM, 128GB Storage)</h3>
                 <p><strong>Price:</strong> ₹11,498 <span class="discount">(26% off)</span></p>
-                <button class="add-to-cart" onclick="addToCart('iQOO Z9 Lite 5G (Mocha Brown, 6GB RAM, 128GB Storage', 11498, 'C:D:/Github/GTM Website/images/pc.jpg')">Add to cart</button>
+                <button class="add-to-cart" onclick="addToCart('iQOO Z9 Lite 5G (Mocha Brown, 6GB RAM, 128GB Storage', 11498, 'pc.jpg')">Add to cart</button>
             </div>
         </section>
 
