--- a/kitchen.html
+++ b/kitchen.html
@@ -48,21 +48,21 @@
         <section id="product-list" class="product-list">
             <!-- Product Card Template -->
             <div class="product-card" data-name="McCoy Mixer" data-price="5660" data-image="kitchen1.jpg">
-                <img src="D:/Github/GTM Website/images/kitchen1.jpg" alt="McCoy Turbo Mixer" class="product-image">
+                <img src="kitchen1.jpg" alt="McCoy Turbo Mixer" class="product-image">
                 <h3>McCoy Turbo 750-Watt Mixer Grinder 4 Jar (White/Blue)</h3>
 		<div class="rating">⭐⭐⭐⭐☆ (4.5)</div> <!-- Static rating for example -->
                 <p>Price: ₹5,660 <span style="text-decoration:line-through;">₹6,300</span><span class="discount"> (10% off)</span></p>
                 <button onclick="addToCart('McCoy Turbo 750-Watt Mixer Grinder 4 Jar (White/Blue)', 5660, 'kitchen1.jpg')">Add to Cart</button>
             </div>
             <div class="product-card" data-name="WisTec Grill" data-price="2099" data-image="kitchen2.jpg">
-                <img src="D:/Github/GTM Website/images/kitchen2.jpg" alt="WisTec Grill Sandwich Maker" class="product-image">
+                <img src="kitchen2.jpg" alt="WisTec Grill Sandwich Maker" class="product-image">
                 <h3>WisTec Grill Sandwich Maker 1000 Watt Panini Griller With 180° For Open And Close Grilling With Adjustable Hinges and Non Stick Coating Plate With Heat Resistance Handle (Steel) (1000 watt)</h3>
 		<div class="rating">⭐⭐⭐⭐☆ (4.0)</div> <!-- Static rating for example -->
                 <p>Price: ₹2,099 <span style="text-decoration:line-through;">₹4,500</span><span class="discount"> (53% off)</span></p>
                 <button onclick="addToCart('WisTec Grill Sandwich Maker 1000 Watt Panini Griller With 180° For Open And Close Grilling With Adjustable Hinges and Non Stick Coating Plate With Heat Resistance Handle (Steel) (1000 watt)', 2099, 'kitchen2.jpg')">Add to Cart</button>
             </div>
 	    <div class="product-card" data-name="Usha Electric Kettle" data-price="2099" data-image="kitchen3.jpg">
-                <img src="D:/Github/GTM Website/images/kitchen3.jpg" alt="WisTec Grill Sandwich Maker" class="product-image">
+                <img src="kitchen3.jpg" alt="WisTec Grill Sandwich Maker" class="product-image">
                 <h3>Usha Electric Kettle 1200W | 1.5L| Cool touch handle | Wider Mouth | Food-grade stainless steel | Safety with auto cut-off function (Silver & Black)</h3>
 		<div class="rating">⭐⭐⭐⭐⭐ (5.0)</div> <!-- Static rating for example -->
                 <p>Price: ₹949 <span style="text-decoration:line-through;">₹1,240</span><span class="discount"> (23% off)</span></p>
