--- a/all.html
+++ b/all.html
@@ -51,21 +51,21 @@
         <section id="product-list" class="product-list">
             <!-- Product Card Template -->
             <div class="product-card" data-name="McCoy Mixer" data-price="5660" data-image="kitchen1.jpg">
-                <img src="C:/Users/Shubham/OneDrive/Desktop/GTM Website/kitchen1.jpg" alt="McCoy Turbo Mixer" class="product-image">
+                <img src="kitchen1.jpg" alt="McCoy Turbo Mixer" class="product-image">
                 <h3>McCoy Turbo 750-Watt Mixer Grinder 4 Jar (White/Blue)</h3>
 		<div class="rating">⭐⭐⭐⭐☆ (4.5)</div> <!-- Static rating for example -->
                 <p>Price: ₹5,660 <span style="text-decoration:line-through;">₹6,300</span><span class="discount"> (10% off)</span></p>
                 <button onclick="addToCart('McCoy Turbo 750-Watt Mixer Grinder 4 Jar (White/Blue)', 5660, 'kitchen1.jpg')">Add to Cart</button>
             </div>
             <div class="product-card" data-name="WisTec Grill" data-price="2099" data-image="kitchen2.jpg">
-                <img src="C:/Users/Shubham/OneDrive/Desktop/GTM Website/kitchen2.jpg" alt="WisTec Grill Sandwich Maker" class="product-image">
+                <img src="kitchen2.jpg" alt="WisTec Grill Sandwich Maker" class="product-image">
                 <h3>WisTec Grill Sandwich Maker 1000 Watt Panini Griller With 180° For Open And Close Grilling With Adjustable Hinges and Non Stick Coating Plate With Heat Resistance Handle (Steel) (1000 watt)</h3>
 		<div class="rating">⭐⭐⭐⭐☆ (4.0)</div> <!-- Static rating for example -->
                 <p>Price: ₹2,099 <span style="text-decoration:line-through;">₹4,500</span><span class="discount"> (53% off)</span></p>
                 <button onclick="addToCart('WisTec Grill Sandwich Maker 1000 Watt Panini Griller With 180° For Open And Close Grilling With Adjustable Hinges and Non Stick Coating Plate With Heat Resistance Handle (Steel) (1000 watt)', 2099, 'kitchen2.jpg')">Add to Cart</button>
             </div>
 	    <div class="product-card" data-name="Usha Electric Kettle" data-price="2099" data-image="kitchen3.jpg">
-                <img src="C:/Users/Shubham/OneDrive/Desktop/GTM Website/kitchen3.jpg" alt="WisTec Grill Sandwich Maker" class="product-image">
+                <img src="kitchen3.jpg" alt="WisTec Grill Sandwich Maker" class="product-image">
                 <h3>Usha Electric Kettle 1200W | 1.5L| Cool touch handle | Wider Mouth | Food-grade stainless steel | Safety with auto cut-off function (Silver & Black)</h3>
 		<div class="rating">⭐⭐⭐⭐⭐ (5.0)</div> <!-- Static rating for example -->
                 <p>Price: ₹949 <span style="text-decoration:line-through;">₹1,240</span><span class="discount"> (23% off)</span></p>
@@ -111,21 +111,21 @@
         <section class="product-list">
             <!-- Sample Product Card -->
             <div class="product-card" data-product-id="poco-m6">
-                <img src="C:/Users/Shubham/OneDrive/Desktop/GTM Website/iq.jpg" alt="POCO M6 5G" class="product-image">
+                <img src="iq.jpg" alt="POCO M6 5G" class="product-image">
                 <h3>POCO M6 5G (Orion Blue, 4GB RAM, 64GB Storage)</h3>
                 <p><strong>Price:</strong> ₹7,999 <span class="discount">(16% off)</span></p>
                 <button class="add-to-cart" onclick="addToCart('POCO M6 5G (Orion Blue, 4GB RAM, 64GB Storage)', 7999, 'C:/Users/Shubham/OneDrive/Desktop/GTM Website/iq.jpg')">Add to cart</button>
             </div>
 
             <div class="product-card" data-product-id="redmi-13c">
-                <img src="C:/Users/Shubham/OneDrive/Desktop/GTM Website/rm.jpg" alt="Redmi 13C 5G" class="product-image">
+                <img src="rm.jpg" alt="Redmi 13C 5G" class="product-image">
                 <h3>Redmi 13C 5G (Starlight Black, 4GB RAM, 128GB Storage)</h3>
                 <p><strong>Price:</strong> ₹9,199 <span class="discount">(34% off)</span></p>
                 <button class="add-to-cart" onclick="addToCart('Redmi 13C 5G (Starlight Black, 4GB RAM, 128GB Storage)', 9199, 'C:/Users/Shubham/OneDrive/Desktop/GTM Website/rm.jpg')">Add to cart</button>
             </div>
 
             <div class="product-card" data-product-id="iqoo-z9-lite">
-                <img src="C:/Users/Shubham/OneDrive/Desktop/GTM Website/pc.jpg" alt="iQOO Z9 Lite 5G" class="product-image">
+                <img src="pc.jpg" alt="iQOO Z9 Lite 5G" class="product-image">
                 <h3>iQOO Z9 Lite 5G (Mocha Brown, 6GB RAM, 128GB Storage)</h3>
                 <p><strong>Price:</strong> ₹11,498 <span class="discount">(26% off)</span></p>
                 <button class="add-to-cart" onclick="addToCart('iQOO Z9 Lite 5G (Mocha Brown, 6GB RAM, 128GB Storage', 11498, 'C:/Users/Shubham/OneDrive/Desktop/GTM Website/pc.jpg')">Add to cart</button>
