--- a/cart.html
+++ b/cart.html
@@ -29,8 +29,9 @@
                 <p>Returns & Orders</p>
             </div>
             <div class="cart">
-                <p>🛒 Cart</p>
-            </div>
+                <a href="index.html" style="text-decoration: none; color: inherit;">
+                    🏠︎   Home 
+                </a>
         </div>
         <nav class="nav-bar">
             <ul>
