--- a/cart.html
+++ b/cart.html
@@ -32,6 +32,7 @@
                 <a href="index.html" style="text-decoration: none; color: inherit;">
                     🏠︎   Home 
                 </a>
+            </div>
         </div>
         <nav class="nav-bar">
             <ul>
