--- a/all.html
+++ b/all.html
@@ -28,10 +28,11 @@
             <div class="orders">
                 <p>Returns & Orders</p>
             </div>
-            <div class="cart">
+           <div class="cart">
                 <a href="index.html" style="text-decoration: none; color: inherit;">
                     🏠︎   Home 
                 </a>
+            </div>
         </div>
         <nav class="nav-bar">
             <ul>
