--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             <div class="orders">
                 <p>Returns & Orders</p>
             </div>
-            <div class="cart">
-                <p>🛒 Cart</p>
+           <div class="cart">
+                <a href="index.html" style="text-decoration: none; color: inherit;">
+                    🏠︎   Home 
+                </a>
             </div>
         </div>
         <nav class="nav-bar">
