--- a/kitchen.html
+++ b/kitchen.html
@@ -29,7 +29,9 @@
                 <p>Returns & Orders</p>
             </div>
             <div class="cart">
-                <p>🛒 Cart</p>
+                <a href="index.html" style="text-decoration: none; color: inherit;">
+                    🏠︎   Home 
+                </a>
             </div>
         </div>
         <nav class="nav-bar">
